--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -18,5 +18,6 @@ jobs:
       - uses: carvel-dev/setup-action@v2
         with:
           only: ytt
+      - run: python -m pip install -r scripts/requirements.txt
       - run: python scripts/generate.py
           
