--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -11,6 +11,9 @@ jobs:
   generate-ini:
     runs-on: ubuntu-latest
     steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%s')"
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
@@ -20,4 +23,10 @@ jobs:
           only: ytt
       - run: python -m pip install -r scripts/requirements.txt
       - run: python scripts/generate.py
-          
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: "config-update-${{ steps.date.outputs.date }}"
+          commit_message: push application deployment to dev
+          commit_user_name: github_action
+          create_branch: true
+          repository: .  
